--- a/includes/style/sass/resume.sass
+++ b/includes/style/sass/resume.sass
@@ -149,7 +149,7 @@ section.resume
 	.experience
 		position: relative
 		display: inline-block
-		// margin-bottom: $global-margin
+		margin-bottom: $global-margin
 
 		.job, .school
 			// display: flex
